--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Foundation</title>
   <link rel="stylesheet" href="stylesheets/app.css" />
   <link rel="stylesheet" href="stylesheets/mystyle.css" />
+  <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:700' rel='stylesheet' type='text/css'>
   <script src="bower_components/modernizr/modernizr.js"></script>
 
 </head>
