--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <li class="active" ><a href="#"><strong>HOME</strong></a>
                 </li>
                 <li class="has-dropdown"  ><a href="#"><strong>ABOUT</strong></a>
-                  <ul class="dropdown">
-                    <li >TESTIMONIALS</li>
+                  <ul  class="dropdown">
+                    <li>TESTIMONIALS</li>
                     <li >ARCHIVES</li>
                     <li >FAQS</li>
                   </ul></li>
@@ -78,8 +78,8 @@
         </div>
       </div>
       <div id="triplet">
-        <div class="row">
-          <div class="medium-4 columns " >
+        <div class="row bar">
+          <div class="medium-4 columns  " >
             <h4 style="color:white;"><strong>EMOCLEW</strong></h3>
               <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
               <a href="#" class="button tiny ">DAER EROM</a></div>
@@ -111,7 +111,7 @@
                 </div>
               </div>
               <div class="triple-box">
-                <ul class="large-block-grid-3">
+                <ul class="large-block-grid-3 ">
                   <li>
                     <div class="row">
                       <div class="large-6 columns">
